検索結果表示コンテナのスクロール調整

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ a:link, a:visited, a:hover, a:active {
 
 #result {
   display: block;
-  overflow-x: scroll;
+  /* overflow-x: scroll; */
   white-space: nowrap;
 }
 
